-
Bug
-
Resolution: Fixed
-
P3
-
11.0.2, 12, 13
-
b18
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8241571 | 13.0.3 | Vivek Deshpande | P3 | Resolved | Fixed | b02 |
| JDK-8232145 | 11.0.6-oracle | Vivek Deshpande | P3 | Resolved | Fixed | b01 |
| JDK-8234155 | 11.0.6 | Vivek Deshpande | P3 | Resolved | Fixed | b04 |
- backported by
-
JDK-8232145 UseAVX=3 has performance degredation on Skylake (X7) processors
-
- Resolved
-
-
JDK-8234155 UseAVX=3 has performance degredation on Skylake (X7) processors
-
- Resolved
-
-
JDK-8241571 UseAVX=3 has performance degredation on Skylake (X7) processors
-
- Resolved
-
- relates to
-
JDK-8286823 Default to UseAVX=2 on all Skylake/Cascade Lake CPUs
-
- Open
-
-
JDK-8234610 MaxVectorSize set wrongly when UseAVX=3 is specified after JDK-8221092
-
- Closed
-
-
JDK-8238596 AVX enabled by default for Skylake even when unsupported
-
- Resolved
-
-
JDK-8234945 Build on arm32 broken since changeset 57111:dff8053bdb74
-
- Closed
-