8221092: UseAVX=3 has performance degredation on Skylake (X7) processors

Fix for UseAVX=3 has performance degredation on Skylake (X7) processors

Reviewed-by: kvn